feat: start main nav section

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,6 @@
 @use './partials/header';
 @use './partials/hero';
+@use './partials/mainNav';
 @use './partials/variables' as *;
 
 @import '~bootstrap/scss/bootstrap';
