--- a/resources/scss/partials/_hero.scss
+++ b/resources/scss/partials/_hero.scss
@@ -7,8 +7,9 @@
     min-height: 320px;
 }
 
-section{
+.hero-section{
     background-color: #1C1C1C;
+  
 }
 
 .current-series{
@@ -26,12 +27,13 @@ button{
 .ms-card{
     background-color: transparent!important;
     border: none !important;
+    img{
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
-img{
-    height: 100%;
-    object-fit: cover;
-}
+
 .ms-card-img{
     height: 80%
 }
