feat: add top footer section

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 @use './partials/header';
 @use './partials/hero';
 @use './partials/mainNav';
+@use './partials/footerTop';
 @use './partials/variables' as *;
 
 @import '~bootstrap/scss/bootstrap';
