feat: add bottom footer

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,7 @@
 @use './partials/hero';
 @use './partials/mainNav';
 @use './partials/footerTop';
+@use './partials/footerBottom';
 @use './partials/variables' as *;
 
 @import '~bootstrap/scss/bootstrap';
